--- a/test-output/SparkReport/Index.html
+++ b/test-output/SparkReport/Index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">API Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jan 16, 2023 04:27:58 PM</span></a>
+<a href="#"><span class="badge badge-primary">Jan 16, 2023 11:39:03 PM</span></a>
 </li>
 </ul>
 </div>
@@ -61,13 +61,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jan 16, 2023 04:27:58 PM</h3>
+<h3>Jan 16, 2023 11:39:03 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jan 16, 2023 04:28:02 PM</h3>
+<h3>Jan 16, 2023 11:39:07 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -118,7 +118,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>4</b> scenarios passed</small></div>
+<div><small data-tooltip='100%'><b>5</b> scenarios passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> scenarios failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -138,7 +138,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>12</b> steps passed</small></div>
+<div><small data-tooltip='100%'><b>15</b> steps passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -157,7 +157,7 @@
 </div></div>
 <script>
 var timeline = {
-"Batch":3.926
+"Batch":3.968
 };
 </script>
 <div class="row">
@@ -193,13 +193,13 @@ failParent: 0,
 warningParent: 0,
 skipParent: 0,
 childCount: 5,
-passChild: 4,
+passChild: 5,
 failChild: 0,
 warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 12,
+passGrandChild: 15,
 failGrandChild: 0,
 warningGrandChild: 0,
 skipGrandChild: 0,
@@ -231,7 +231,7 @@ eventsCount: 5,
           <div class="test-detail">
             <p class="name">Batch</p>
             <p class="text-sm">
-              <span>4:27:58 PM</span> / <span>00:00:03:926</span>
+              <span>11:39:03 PM</span> / <span>00:00:03:968</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -240,9 +240,9 @@ eventsCount: 5,
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Batch</h5>
-<span class='badge badge-success'>01.16.2023 4:27:58 PM</span>
-<span class='badge badge-danger'>01.16.2023 4:28:02 PM</span>
-<span class='badge badge-default'>00:00:03:926</span>
+<span class='badge badge-success'>01.16.2023 11:39:03 PM</span>
+<span class='badge badge-danger'>01.16.2023 11:39:07 PM</span>
+<span class='badge badge-default'>00:00:03:968</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -254,14 +254,14 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Create Batch</div>
+        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Create Batches</div>
       </div>
     </div>
         <div class="scenario_outline collapse">
             <div class="card-body l1">
               <div class="card-header">
                 <div class="card-title outline-child">
-                  <div class="node" id="3"><span class="badge log pass-bg mr-2">Pass</span>Create Batch</div>
+                  <div class="node" id="3"><span class="badge log pass-bg mr-2">Pass</span>Create Batches</div>
                 </div>
               </div>
               <div class="card-body mt-3 collapse">
@@ -285,7 +285,7 @@ eventsCount: 5,
             <div class="card-body l1">
               <div class="card-header">
                 <div class="card-title outline-child">
-                  <div class="node" id="7"><span class="badge log pass-bg mr-2">Pass</span>Create Batch</div>
+                  <div class="node" id="7"><span class="badge log pass-bg mr-2">Pass</span>Create Batches</div>
                 </div>
               </div>
               <div class="card-body mt-3 collapse">
@@ -311,7 +311,40 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="11"><span class="badge log pass-bg mr-2">Pass</span>Get Batches by batchId</div>
+        <div class="node" id="11"><span class="badge log pass-bg mr-2">Pass</span>update the batch by id</div>
+      </div>
+    </div>
+        <div class="scenario_outline collapse">
+            <div class="card-body l1">
+              <div class="card-header">
+                <div class="card-title outline-child">
+                  <div class="node" id="12"><span class="badge log pass-bg mr-2">Pass</span>update the batch by id</div>
+                </div>
+              </div>
+              <div class="card-body mt-3 collapse">
+                  <div class="step pass-bg">
+                    <span>Given A valid API url "https://lms-backend-service.herokuapp.com/lms/"</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>When User send payload with batch_name as Jan23-API_Learners-SDET-SDET411 batch_description asRestAPI Batch009 and batch status asActive and send  request with /batches/</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>Then new Program is Created 200</span>
+      <div>
+      </div>
+                  </div>
+              </div>
+            </div>
+        </div>
+  </div>
+  <div class="card">
+    <div class="card-header" role="tab">
+      <div class="card-title">
+        <div class="node" id="16"><span class="badge log pass-bg mr-2">Pass</span>Get Batches by batchId</div>
       </div>
     </div>
         <div class="collapse">
@@ -337,7 +370,7 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="15"><span class="badge log pass-bg mr-2">Pass</span>Delete Batches by batchId</div>
+        <div class="node" id="20"><span class="badge log pass-bg mr-2">Pass</span>Delete Batches by batchId</div>
       </div>
     </div>
         <div class="collapse">
